# CozeRobotChat

./: .env  .gitignore  README.md  communication.py  communication2.py  config.py  install_dependencies.sh  main.py  requirements.txt
hardware/: audio_interface.py
ros/robot_leju_sdk/: control_robot_head.py  control_robot_head_demo.py
ros_test/: .gitignore  readme.md
ros_test/.catkin_tools/profiles/default/: devel_collisions.txt
ros_test/devel/: .catkin  setup.sh
ros_test/devel/include/kuavo_audio_player/: playmusic.h  playmusicRequest.h
ros_test/devel/include/music_client/: playmusic.h  playmusicRequest.h  playmusicResponse.h
ros_test/devel/include/musicplayer_pkg/: playmusic.h  playmusicRequest.h  playmusicResponse.h
ros_test/devel/lib/kuavo_audio_player/: loundspeaker.py
ros_test/devel/lib/music_client/: client_play_music.py
ros_test/devel/lib/pkgconfig/: kuavo_audio_player.pc  music_client.pc  musicplayer_pkg.pc
ros_test/src/kuavo_audio_player/: CMakeLists.txt
ros_test/src/musicplayer_pkg/: CMakeLists.txt
ros_test/src/musicplayer_pkg/launch/: musicplayer_pkg.launch
services/: api_client.py  audio_manager.py  audio_service.py  chat_processor.py  error_handler.py  keyboard_service.py  keyboard_service2.py  resource_manager.py  scheduler.py
src/: .env  config.py  main.py
src/hardware/: audio_interface.py
src/services/: api_client.py  audio_manager.py  audio_service.py  chat_processor.py  error_handler.py  exceptions.py  keyboard_service.py  resource_manager.py  scheduler.py
src/utils/: cleaner.py  paths.py
utils/: backoff.py
(+30 files in other folders)
